[package]
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"
name = "object-builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "object-builder"
path = "src/main.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/misc" }
rpc         = { path = "../rpc" }
communication_utils     = { path = "../utils/communication" }
tracing_utils           = { path = "../utils/tracing" }
settings_utils          = { path = "../utils/settings" }
metrics_utils           = { path = "../utils/metrics" }
notification_utils      = { path = "../utils/notifications" }
service_health_utils    = { path = "../utils/service_health" }

# Crates.io
anyhow      = "1.0.43"
async-trait = "0.1.51"
bb8         = "0.7.1"
derive_more = "0.99.16"
futures     = "0.3.16"
itertools   = "0.10.1"
maplit      = "1.0.2"
serde       = { version = "1.0.127", features = ["derive"] }
serde_json  = "1.0.66"
thiserror   = "1.0.26"
tokio       = { version = "1.10.0", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.5.2"
tracing     = "0.1.26"
uuid        = { version = "0.8.2", features = ["v1", "serde"] }
pin-project-lite        = "0.2.7"
tokio-stream            = "0.1.7"
tracing-futures         = "0.2.5"

[dev-dependencies]
snapshot-runner         = { git = "https://github.com/frondeus/snapshot-runner.git" }
