[package]
name = "partial-update-engine"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "partial-update-engine"
path = "src/main.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
tracing_utils           = { path = "../utils/crates/tracing" }

# Crates.io
anyhow      = "1.0.40"
async-trait = "0.1.50"
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
tokio       = { version = "1.6.1", features = ["macros"] }
tracing     = "0.1.26"
uuid        = { version = "0.8.2", features = ["v1", "serde"] }
rdkafka     = { version = "0.26.0", features = ["cmake-build"] }
tokio-stream            = "0.1.6"
