[package]
name = "partial-update-engine"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "partial-update-engine"
path = "src/main.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/misc" }
rpc         = { path = "../rpc" }
settings_utils          = { path = "../utils/settings" }
metrics_utils           = { path = "../utils/metrics" }
tracing_utils           = { path = "../utils/tracing" }

# Crates.io
anyhow      = "1.0.43"
async-trait = "0.1.51"
serde       = { version = "1.0.127", features = ["derive"] }
serde_json  = "1.0.66"
tokio       = { version = "1.10.0", features = ["macros"] }
tracing     = "0.1.26"
uuid        = { version = "0.8.2", features = ["v1", "serde"] }
rdkafka     = { version = "0.26.0", features = ["cmake-build"] }
tokio-stream            = "0.1.7"
