[package]
name = "query-router"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "query-router"
path = "src/main.rs"

[dependencies]
# Workspace
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
tracing_utils           = { path = "../utils/crates/tracing", features = ["http"] }

# Crates.io
anyhow      = "1.0"
lru-cache   = "0.1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
uuid        = { version = "0.8", features = ["v4", "serde"] }
tokio       = { version = "1.6", features = ["macros"] }
tracing     = "0.1"
warp        = "0.3"
futures-util            = "0.3"
tracing-futures         = "0.2"
