[package]
name = "query-router"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "query-router"
path = "src/main.rs"

[dependencies]
# Workspace
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
cache       = { path = "../utils/crates/cache" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
tracing_utils           = { path = "../utils/crates/tracing", features = ["http"] }

# Crates.io
anyhow      = "1.0.40"
async-trait = "0.1.50"
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
tokio       = { version = "1.6.1", features = ["macros"] }
tracing     = "0.1.26"
warp        = "0.3.1"
futures-util            = "0.3.15"
tracing-futures         = "0.2.5"
