[package]
name = "query-router"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "query-router"
path = "src/main.rs"

[dependencies]
# Workspace
misc_utils  = { path = "../utils/misc" }
rpc         = { path = "../rpc" }
cache       = { path = "../utils/cache" }
settings_utils          = { path = "../utils/settings" }
metrics_utils           = { path = "../utils/metrics" }
tracing_utils           = { path = "../utils/tracing", features = ["http"] }

# Crates.io
anyhow      = "1.0.43"
async-trait = "0.1.51"
serde       = { version = "1.0.127", features = ["derive"] }
serde_json  = "1.0.66"
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
tokio       = { version = "1.10.0", features = ["macros"] }
tracing     = "0.1.26"
warp        = "0.3.1"
futures-util            = "0.3.16"
tracing-futures         = "0.2.5"
