[package]
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"
name = "query-service-ts"
version = "0.1.0"

[lib]
name = "query_service_ts"
path = "src/lib.rs"

[[bin]]
name = "query-service-ts"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
bb8         = "0.4"
log         = "0.4.14"
env_logger  = "0.8.3"
reqwest     = { version = "0.10", features = ["json"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
structopt   = "0.3"
tokio       = { version = "0.2", features = ["macros"] }
tonic       = "0.3"
