[package]
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"
name = "query-service-ts"
version = "0.1.0"

[lib]
name = "query_service_ts"
path = "src/lib.rs"

[[bin]]
name = "query-service-ts"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
bb8         = "0.7"
reqwest     = { version = "0.11", features = ["json"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1.5", features = ["macros", "rt-multi-thread"] }
tonic       = "0.4"
tracing     = "0.1"
tracing-futures         = "0.2"
