[package]
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"
name = "query-service-ts"
version = "0.1.0"

[lib]
name = "query_service_ts"
path = "src/lib.rs"

[[bin]]
name = "query-service-ts"
path = "src/main.rs"

[dependencies]
# Workspace
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
tracing_utils           = { path = "../utils/crates/tracing" }

# Crates.io
anyhow      = "1.0.40"
bb8         = "0.7.0"
reqwest     = { version = "0.11.3", features = ["json"] }
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
tokio       = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
tonic       = "0.4.3"
tracing     = "0.1.26"
tracing-futures         = "0.2.5"
