[package]
name = "query-service"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[lib]
name = "query_service"
path = "src/lib.rs"

[[bin]]
name = "query-service"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
log         = "0.4"
env_logger  = "0.8"
bb8         = "0.4"
anyhow      = "1.0"
thiserror   = "1.0"
structopt   = "0.3"
tonic       = "0.3"
serde_json  = "1.0"
serde       = { version = "1.0", features = ["derive"] }
tokio       = { version = "0.2", features = ["macros"] }
uuid        = { version = "0.8", features = ["v1", "serde"] }
reqwest     = { version = "0.10", features = ["json"] }
bb8-postgres            = { version = "0.4", features = ["with-uuid-0_8", "with-serde_json-1"] }
