[package]
name = "query-service"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[lib]
name = "query_service"
path = "src/lib.rs"

[[bin]]
name = "query-service"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
clap        = "3.0.0-beta.2"
bb8         = "0.7"
reqwest     = { version = "0.11", features = ["json"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "1.0"
tokio       = { version = "1.5", features = ["macros", "rt-multi-thread"] }
tonic       = "0.4"
tracing     = "0.1"
uuid        = { version = "0.8", features = ["v4", "serde"] }
bb8-postgres            = { version = "0.7", features = ["with-uuid-0_8", "with-serde_json-1"] }
tracing-futures         = "0.2"
