[package]
name = "rpc"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "rpc"
path = "src/lib.rs"

[dependencies]
# Workspace
tracing_utils           = { path    = "../utils/crates/tracing", features = ["grpc"] }

# Crates.io
anyhow      = "1.0.40"
derive_more = "0.99.14"
prost       = "0.7.0"
serde       = { version = "1.0.126", features = ["derive"] }
sqlx        = { version = "0.5.5", features = ['runtime-tokio-rustls'] }
thiserror   = "1.0.25"
tonic       = "0.4.3"
async-graphql           = { version = "2.9.0", features = ["uuid"] }
futures-util            = "0.3.15"
