[package]
name = "rpc"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "rpc"
path = "src/lib.rs"

[dependencies]
# Workspace
tracing_utils           = { path    = "../utils/crates/tracing", features = ["grpc"] }

# Crates.io
anyhow      = "1.0.42"
async-trait = "0.1.50"
bb8         = "0.7.0"
derive_more = "0.99.16"
http        = "0.2.4"
prost       = "0.8.0"
serde       = { version = "1.0.126", features = ["derive"] }
sqlx        = { version = "0.5.5", features = ['runtime-tokio-rustls'] }
thiserror   = "1.0.26"
tonic       = "0.5.0"
tracing     = "0.1.26"
async-graphql           = { version = "2.9.8", features = ["uuid"] }
futures-util            = "0.3.15"
