[package]
name = "schema-registry"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[lib]
name = "schema_registry"
path = "src/lib.rs"

[[bin]]
name = "schema-registry"
path = "src/main.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
communication_utils     = { path = "../utils/crates/communication" }
tracing_utils           = { path = "../utils/crates/tracing", features = ["grpc"] }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }

# Crates.io
anyhow      = "1.0.40"
async-trait = "0.1.50"
bb8         = "0.7.0"
futures     = "0.3.15"
either      = "1.6.1"
jsonschema  = { version = "0.9.0", default-features = false }
semver      = { version = "1.0.3", features = ["serde"] }
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
sqlx        = { version = "0.5.5", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "uuid", "json", "offline"] }
thiserror   = "1.0.25"
tokio       = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
tonic       = "0.4.3"
tracing     = "0.1.26"
url         = "2.2.2"
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
futures-util            = "0.3.15"
tokio-stream            = "0.1.6"
tracing-futures         = "0.2.5"

[dev-dependencies]
maplit = "1.0.2"
