[package]
name = "types"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
rpc         = { path = "../rpc" }

# Crates.io
anyhow      = "1.0.43"
serde       = { version = "1.0.127", features = ["derive"] }
